maze.lessons.maze.pledge.PledgeMaze.scala.code
def isDirectionFree(dir:Direction) {
  var directionCourante : Direction = getDirection()
  setDirection(dir)
  var retour = ! estFaceMur()
  setDirection(directionCourante)
  return retour
}

override def run() {
  
  var sommeVirage : Int = 0
  var dir : Direction = Direction.NORTH
  while(getY() != 0){
    setDirection(Direction.NORTH)
    while (!estFaceMur()){
      avance()
    }
    if (getY() != 0) {
      while( sommeVirage != 0 ) {
      sommeVirage = keepHandOnSideWall(sommeVirage)
      }
    } else {
      setDirection(Direction.EAST)
    }
    
  }
  while(!estSurBiscuit()) {
    keepHandOnSideWall()
  }
  prendBiscuit()
}




def keepHandOnSideWall(som :Int) {
  var somme : Int = som
  gauche()
  somme = somme-1
  if (!estFaceMur()){
    avance()
  }
  else {
    while (estFaceMur()){
      droite()
      somme= somme+1
      }
    avance()
  }
  return somme
  
}